# SimpleComicsViewer

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  SimpleComicsViewer.desktop.sample  Simple_Comics_Viewer-x86_64.AppImage  autogen.sh  configure.ac  create_appimage.sh  database_utils.c  database_utils.h  loader.c  loader.h  main.c  mainwindow.c  mainwindow.h  pdf_loader.c  test.db  utils.c  utils.h  viewer.c  viewer.h
.cache/clangd/index/: loader.h.8F1329DD646A6FC2.idx  pdf_loader.h.6BDD6CA49DACC1FB.idx  utils.h.558DB9F6518C9A9B.idx  viewer.c.3760CF7984546B90.idx  viewer.h.38886CD3ECF4A109.idx
.clangd/index/: loader.c.427B50CD96FB6957.idx  loader.h.F1861C4647C12A18.idx  main.c.11DC0516F270BA20.idx  mainwindow.c.FA488AC90465798A.idx  mainwindow.h.7E759A61540D5B5B.idx  utils.c.7C8B02274EA3987D.idx  utils.h.FA395418FEC0A07B.idx  viewer.c.BFFB72D46266B8C7.idx  viewer.h.480F87B92243F94F.idx
.github/workflows/: build.yml  c-cpp.yml  main.yml  test.yml
appimage_dir/: AppRun  simple_comics_viewer.desktop
for_appimage_assets/: simple_comics_viewer.desktop
src/: .#viewer.c  Makefile.am  Makefile.in  config.h  database_utils.c  database_utils.h  loader.c  loader.h  main.c  pdf_loader.c  pdf_loader.h  pdf_loader_multithread.c.bak  pdf_loader_single_thread.c.bak  pdf_loader_thread.c  utils.c  utils.h  viewer.c  viewer.h
src/.deps/: simple_comics_viewer-loader.Po  simple_comics_viewer-main.Po  simple_comics_viewer-utils.Po  simple_comics_viewer-viewer.Po
